<resources xmlns:android="http://schemas.android.com/apk/res/android">
    <string name="app_name">AnyMemo</string>
    <string name="app_full_name">AnyMemo Free</string>
    <string name="app_version">9.999.1</string>
    <string name="ok_text">OK</string>
    <string name="cancel_text">Cancel</string>
    <string name="yes_text">Yes</string>
    <string name="no_text">No</string>
    <string name="back_menu_text">Back</string>
    <string name="detail_menu_text">Detail</string>
    <string name="settings_menu_text">Settings</string>
    <string name="speak_question_menu_text">Speak question</string>
    <string name="speak_answer_menu_text">Speak answer</string>
    <string name="undo_text">Undo</string>
    <string name="undo_fail_text">Unable to undo</string>
    <string name="undo_fail_message">You can only undo 1 card.</string>
    <string name="open_button_text">Open database</string>
    <string name="recent_button_text">Open recent database</string>
    <string name="recent_databases">Recent databases</string>
    <string name="option_button_text">Options</string>
    <string name="download_button_text">Download databases</string>
    <string name="about_button_text">About</string>
    <string name="help_button_text">Help</string>
    <string name="edit_button_text">Preview/edit</string>
    <string name="autoaudio">Automatic speak</string>
    <string name="autoaudio_summary">The question and answer will be read automatically.</string>
    <string name="btnonerow">Compact grade button</string>
    <string name="btnonerow_summary">The buttons with 0 to 5 score are displayed in 1 row instead of 2.</string>
    <string name="copyclipboard">Copy to clipboard</string>
    <string name="copyclipboard_summary">The question will be automatically copied to clipboard.</string>
    <string name="memo_show_answer">\?\nShow answer</string>
    <string name="memo_no_item_title">No item</string>
    <string name="memo_no_item_message">There is no item to learn for now. Going back is recommended. Use the cram review to learn ahead of time.</string>
    <string name="memo_btn0_text">0 Forgot</string>
    <string name="memo_btn1_text">1 Forgot</string>
    <string name="memo_btn2_text">2 Very Hard</string>
    <string name="memo_btn3_text">3 Hard</string>
    <string name="memo_btn4_text">4 Easy</string>
    <string name="memo_btn5_text">5 Very Easy</string>
    <string name="memo_btn0_help_text">You have forgotten this card completely.</string>
    <string name="memo_btn1_help_text">You have forgotten this card completely.</string>
    <string name="memo_btn2_help_text">Barely correct answer. The interval is too long.</string>
    <string name="memo_btn3_help_text">Correct answer but with much effort. The interval was probably too long.</string>
    <string name="memo_btn4_help_text">Correct answer, with some effort. The interval was probably just right.</string>
    <string name="memo_btn5_help_text">Correct answer, but without any difficulties. The interval was probably too short.</string>
    <string name="memo_btn0_brief_text">0</string>
    <string name="memo_btn1_brief_text">1</string>
    <string name="memo_btn2_brief_text">2</string>
    <string name="memo_btn3_brief_text">3</string>
    <string name="memo_btn4_brief_text">4</string>
    <string name="memo_btn5_brief_text">5</string>
    <string name="memo_btn0_anki_text">Again</string>
    <string name="memo_btn1_anki_text">Again</string>
    <string name="memo_btn2_anki_text">Hard</string>
    <string name="memo_btn3_anki_text">Hard</string>
    <string name="memo_btn4_anki_text">Easy</string>
    <string name="memo_btn5_anki_text">Easy</string>
    <string name="memo_edit_dialog_title">Edit</string>
    <string name="memo_current_id">ID: </string>
    <string name="global_settings">Global settings</string>
    <string name="settings_question_font_size">Question font size</string>
    <string name="settings_question_font_size_prompt">Font size</string>
    <string name="settings_answer_font_size">Answer font size</string>
    <string name="settings_answer_font_size_prompt">Font size</string>
    <string name="settings_question_align">Question text alignment</string>
    <string name="settings_question_align_prompt">Text alignment</string>
    <string name="settings_answer_align">Answer text alignment</string>
    <string name="settings_answer_align_prompt">Text alignment</string>
    <string name="settings_question_locale">Question audio</string>
    <string name="settings_question_locale_prompt">Locale</string>
    <string name="settings_answer_locale">Answer audio</string>
    <string name="settings_answer_locale_prompt">Locale</string>
    <string name="settings_html_display">Display in HTML</string>
    <string name="settings_ratio">Q/A display ratio</string>
    <string name="settings_question_text_color">Question text color</string>
    <string name="settings_answer_text_color">Answer text color</string>
    <string name="settings_question_bg_color">Question background color</string>
    <string name="settings_answer_bg_color">Answer background color</string>
    <string name="settings_wipe">Wipe all learning progress</string>
    <string name="settings_shuffle">Shuffle all cards</string>
    <string name="settings_inverse">Swap the Q/A of all cards</string>
    <string name="settings_save">Save</string>
    <string name="settings_discard">Discard</string>
    <string name="warning_text">Warning</string>
    <string name="settings_wipe_warning">ALL learning progress will be reset!</string>
    <string name="settings_shuffle_warning">This operation will shuffle all cards and can NOT be undone.</string>
    <string name="settings_inverse_warning">This operation will swap the location of question and answer. Swap&amp;dup will add all swapped cards to the back of current database instead of replacing.</string>
    <string name="detail_update">Write changes</string>
    <string name="detail_back">Back</string>
    <string name="delete_warning">Do you really want to delete this card?</string>
    <string name="skip_text">Skip</string>
    <string name="skip_warning">This item will never appear for learning. Do you want to skip it?</string>
    <string name="stat_total">Total: </string>
    <string name="stat_scheduled">Rev: </string>
    <string name="stat_new">New: </string>
    <string name="open_open_new_db">Open existing database</string>
    <string name="open_import_xml">Import from XML</string>
    <string name="clear_all_pref">Reset all preferences</string>
    <string name="clear_recent_list">Clear recent list</string>
    <string name="export_xml">Export Mnemosyne XML</string>
    <string name="add_screen_question">Question</string>
    <string name="add_screen_new">New</string>
    <string name="add_screen_id">ID</string>
    <string name="add_screen_answer">Answer</string>
    <string name="add_screen_edit">Save</string>
    <string name="add_screen_gotoid">Go to ID</string>
    <string name="add_screen_back">Back</string>
    <string name="add_screen_next">Next</string>
    <string name="add_screen_previous">Previous</string>
    <string name="search_text">Search</string>
    <string name="goto_id_text">Go to ID</string>
    <string name="fb_create_db">Create new DB</string>
    <string name="fb_create_dir">Create new folder</string>
    <string name="fb_create_db_message">Please enter the name of new database.</string>
    <string name="fb_create_dir_message">Please enter the name of new folder.</string>
    <string name="fb_delete_message">Are you sure to delete this file?</string>
    <string name="fb_edit_dialog_title">Edit</string>
    <string name="fb_fail_to_clone">Failure cloning the file.</string>
    <string name="fb_rename">Rename</string>
    <string name="fb_rename_message">Please enter the name below.</string>
    <string name="fb_rename_fail">Fail to rename.</string>
    <string name="loading_please_wait">Please wait...</string>
    <string name="loading_recent_list">Loading recent list...</string>
    <string name="loading_database">Loading database...</string>
    <string name="loading_import">Importing ...\n It may take a long while.</string>
    <string name="success">Success</string>
    <string name="fail">Failed</string>
    <string name="success_import">The XML is successfully converted and stored as</string>
    <string name="fail_import">Fail to convert </string>
    <string name="success_export">Successfully exported to </string>
    <string name="fail_export">Fail to export </string>
    <string name="loading_export">Exporting...\n It may take a long while.</string>
    <string name="loading_save">Saving changes...</string>
    <string name="loading_connect_net">Refreshing list from internet...</string>
    <string name="loading_downloading">Downloading... It may take a while.</string>
    <string name="downloader_connection_error">Connection error</string>
    <string name="downloader_connection_error_message">Cannot connect to server. Please check the internet connection.</string>
    <string name="downloader_download_success">Successfully downloaded</string>
    <string name="downloader_download_success_message">The database has been stored in: </string>
    <string name="downloader_download_fail">Download failed</string>
    <string name="downloader_download_fail_message">Failed to download this database. Error Message:</string>
    <string name="downloader_download_alert">Download: </string>
    <string name="downloader_download_alert_message">Details: </string>
    <string name="about_title">About</string>
    <string name="about_text">Advanced spaced repetition flashcard learning software.&lt;br /&gt;&lt;br /&gt;Authors: Haowen Ning, Qi Wang&lt;br /&gt;&lt;br /&gt;Website: &lt;a href="http://anymemo.org"&gt;http://anymemo.org&lt;/a&gt; &lt;br /&gt;&lt;br /&gt;Acknowledge: Piotr Bazan, pomelo422, Haimivan, williamfeng, Lyndsey Percival, John Rissler&lt;br /&gt;&lt;br /&gt;Translators: Ladislav, jim4ever, paw3lk, Alexander Gomenyuk, Maksym Grinenko, Kim hyun-ho, Thomas Tempé, Alex Wirz Vieira, Neil Barry, Mattia Monga</string>
    <string name="about_version">Version history</string>
    <string name="what_is_new">New version installed</string>
    <string name="downloader_categories">Categories</string>
    <string name="downloader_databases">Databases</string>
    <string name="import_text">Import</string>
    <string name="export_text">Export</string>
    <string name="import_mnemosyne_xml_text">Import Mnemosyne XML</string>
    <string name="export_qa_txt">Export Q/A TXT</string>
    <string name="export_tab_txt">Export tab-separated TXT</string>
    <string name="export_csv">Export CSV</string>
    <string name="import_tab_txt">Import tab-separated TXT</string>
    <string name="edit_dialog_category">Category</string>
    <string name="copy_text">Copy</string>
    <string name="paste_text">Paste</string>
    <string name="shuffling_cards_title">Shuffle cards</string>
    <string name="remove_dup_text">Remove duplicates</string>
    <string name="donate_text">Donate</string>
    <string name="goto_prev_screen">Go to preview/edit screen</string>
    <string name="advanced_setting_text">Advanced ...</string>
    <string name="look_up_text">Look up in a dictionary</string>
    <string name="share_text">Sharing</string>
    <string name="paint_text">Paint</string>
    <string name="edit_text">Edit</string>
    <string name="new_text">New</string>
    <string name="filter_category_text">Filter category</string>
    <string name="delete_text">Delete</string>
    <string name="previous_text_short">Prev</string>
    <string name="quiz_by_group_text">Quiz by group</string>
    <string name="quiz_by_category_text">Quiz by category</string>
    <string name="quiz_group_size_text">Quiz group size</string>
    <string name="quiz_group_number_text">Quiz group number</string>
    <string name="start_quiz_text">Start quiz</string>
</resources>