<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:anymemo="http://schemas.android.com/apk/res-auto" >
    <item android:id="@+id/menuundo"
            android:icon="@drawable/undo_icon"
            android:title="@string/undo_text" />
    <item android:id="@+id/menudetail"
            android:icon="@android:drawable/ic_menu_edit"
            android:title="@string/detail_menu_text" />
    <item android:id="@+id/menusettings"
            android:icon="@android:drawable/ic_menu_preferences"
            android:title="@string/settings_menu_text" />
    <item android:id="@+id/menuspeakquestion"
            android:icon="@drawable/speak_q_48"
            android:title="@string/speak_question_menu_text" />
    <item android:id="@+id/menuspeakanswer"
            android:icon="@drawable/speak_a_48"
            android:title="@string/speak_answer_menu_text" />
    <item android:id="@+id/menu_memo_category"
            android:title="@string/filter_category_text"
            android:icon="@android:drawable/ic_menu_search" />
    <item android:id="@+id/menu_memo_help"
            android:icon="@android:drawable/ic_menu_help"
            android:title="@string/help_button_text" />
    <item android:id="@+id/menu_context_edit"
            android:icon="@android:drawable/ic_menu_edit"
            anymemo:showAsAction="ifRoom"
            android:title="@string/edit_text" />
    <item android:id="@+id/menu_share"
            android:title="@string/share_text" />
    <item android:id="@+id/menu_context_delete"
            android:title="@string/delete_text" />
    <item android:id="@+id/menu_mark_as_learned_forever"
            android:title="@string/mark_as_learned_forever_text" />
    <item android:id="@+id/menu_context_gotoprev"
            android:title="@string/goto_prev_screen" />
    <item android:id="@+id/menu_context_lookup"
            anymemo:showAsAction="ifRoom"
            android:icon="@android:drawable/ic_menu_search"
            android:title="@string/look_up_text" />
    <item android:id="@+id/menu_gestures"
            android:title="@string/gestures_text" />
    <item android:id="@+id/menu_context_paint"
            android:title="@string/paint_text" />
</menu>
