<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="FantastischMemoPrefs"
    android:title="@string/global_settings">
    <CheckBoxPreference
        android:key="autoaudio"
        android:title="@string/autoaudio" 
        android:defaultValue="true"
        android:summary="@string/autoaudio_summary" />
    <CheckBoxPreference
        android:key="btnonerow"
        android:title="@string/btnonerow" 
        android:defaultValue="false"
        android:summary="@string/btnonerow_summary" />
    <CheckBoxPreference
        android:key="copyclipboard"
        android:title="@string/copyclipboard" 
        android:defaultValue="true"
        android:summary="@string/copyclipboard_summary" />
    <CheckBoxPreference
        android:key="autolocale"
        android:title="@string/autolocale_title" 
        android:defaultValue="true"
        android:summary="@string/autolocale_summary" />
 
</PreferenceScreen> 
