<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item 
        android:id="@+id/menu_context_copy"
        android:title="@string/copy_text" />
    <item 
        android:id="@+id/menu_context_paste"
        android:title="@string/paste_text" />
    <item
        android:title = "@string/advanced_setting_text" >
        <menu>
            <item
                android:id="@+id/menu_context_wipe"
                android:title="@string/settings_wipe" />
            <item
                android:id="@+id/menu_context_swap"
                android:title="@string/settings_inverse" />
            <item
                android:id="@+id/menu_context_remove_dup"
                android:title="@string/remove_dup_text" />
        </menu>
    </item>
</menu>
