<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menuback"
  		  android:icon="@drawable/back_icon"  
          android:title="@string/back_menu_text" />
    <item android:id="@+id/menudetail"
  		  android:icon="@android:drawable/ic_menu_edit"
          android:title="@string/detail_menu_text" />
    <item android:id="@+id/menusettings"
  		  android:icon="@android:drawable/ic_menu_preferences"
  		  android:title="@string/settings_menu_text" />
    <item android:id="@+id/menuspeakquestion"
  		  android:icon="@drawable/speak_q_48"
          android:title="@string/speak_question_menu_text" />
    <item android:id="@+id/menuspeakanswer"
  		  android:icon="@drawable/speak_a_48"
          android:title="@string/speak_answer_menu_text" />
    <item android:id="@+id/menuundo"
  		  android:icon="@drawable/undo_icon"
          android:title="@string/undo_text" />
</menu>
