<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/mainmenu_clear"
	    android:icon="@android:drawable/ic_menu_delete"
  		android:title="@string/clear_all_pref" />
    <item android:id="@+id/mainmenu_option"
  		android:icon="@android:drawable/ic_menu_preferences"
  		android:title="@string/option_button_text" />
    <item android:id="@+id/mainmenu_help"
  		android:icon="@android:drawable/ic_menu_help"
  		android:title="@string/help_button_text" />
    <item android:id="@+id/mainmenu_donate"
  		android:icon="@android:drawable/ic_menu_info_details"
        android:visible="true"
  		android:title="@string/donate_text" />
    <item android:id="@+id/mainmenu_about"
  		android:icon="@android:drawable/ic_menu_info_details"
  		android:title="@string/about_button_text" />

</menu>
