<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:padding="10px"> 
<ScrollView android:layout_width="fill_parent"  android:layout_height="wrap_content"> 
            
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content">
  
  
  		  		
    <TextView 
    	android:text="@string/add_screen_id"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
    	android:id="@+id/add_item_id_label"
  		android:padding="3dip"/>
  	<EditText
        android:id="@+id/add_item_id_entry"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/add_item_id_label"
        android:inputType="number"
        android:singleLine="true"
        android:background="@android:drawable/editbox_background"/>
    <TextView 
    	android:text="@string/add_screen_question"
    	android:id="@+id/add_item_question_label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_item_id_entry"
  		android:padding="3dip"/>
  	<EditText
        android:id="@+id/add_item_question_entry"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:lines="3"
        android:layout_below="@+id/add_item_question_label"
        android:inputType="textMultiLine"
        android:gravity="top"
        android:background="@android:drawable/editbox_background"/>
    <TextView 
    	android:text="@string/add_screen_answer"
    	android:id="@+id/add_item_answer_label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_item_question_entry"
  		android:padding="3dip"/>
  	<EditText
        android:id="@+id/add_item_answer_entry"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:lines="3"
        android:layout_below="@+id/add_item_answer_label"
        android:inputType="textMultiLine"
        android:gravity="top"
        android:background="@android:drawable/editbox_background"/>
	<Button 
		android:id="@+id/add_item_but_new" 
		android:layout_width="80dip"
		android:layout_height="wrap_content" 
		android:layout_marginLeft="0dip" 
		android:layout_marginRight="10dip" 
		android:layout_below="@+id/add_item_answer_entry"
		android:text="@string/add_screen_new"/>
	<Button 
		android:id="@+id/add_item_but_edit" 
		android:layout_width="80dip"
		android:layout_height="wrap_content" 
		android:layout_marginLeft="10dip" 
		android:layout_marginRight="10dip" 
		android:layout_toRightOf="@+id/add_item_but_new"
		android:layout_alignTop="@+id/add_item_but_new"
		android:text="@string/add_screen_edit"/>
	<Button 
		android:id="@+id/add_item_but_next" 
		android:layout_width="80dip"
		android:layout_height="wrap_content" 
		android:layout_marginLeft="10dip" 
		android:layout_marginRight="10dip" 
		android:layout_toRightOf="@+id/add_item_but_edit"
		android:layout_alignTop="@+id/add_item_but_edit"
		android:text="@string/add_screen_next"/>
	<Button 
		android:id="@+id/add_item_but_gotoid" 
		android:layout_width="80dip"
		android:layout_height="wrap_content" 
		android:layout_marginLeft="0dip" 
		android:layout_marginRight="10dip" 
		android:layout_below="@+id/add_item_but_new"
		android:text="@string/add_screen_gotoid"/>
	<Button 
		android:id="@+id/add_item_but_back" 
		android:layout_width="80dip"
		android:layout_height="wrap_content" 
		android:layout_marginLeft="10dip" 
		android:layout_marginRight="10dip" 
		android:layout_toRightOf="@+id/add_item_but_gotoid"
		android:layout_alignTop="@+id/add_item_but_gotoid"
		android:text="@string/add_screen_back"/>
	<Button 
		android:id="@+id/add_item_but_previous" 
		android:layout_width="80dip"
		android:layout_height="wrap_content" 
		android:layout_marginLeft="10dip" 
		android:layout_marginRight="10dip" 
		android:layout_toRightOf="@+id/add_item_but_back"
		android:layout_alignTop="@+id/add_item_but_back"
		android:text="@string/add_screen_previous"/>
    

</RelativeLayout>
</ScrollView>
</LinearLayout> 
