<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/buttons_root"
	android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_gravity="bottom">
    <Button 
        android:id="@+id/new_button" 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:layout_weight="1"
        android:lines="1"
        android:text="@string/new_text"
        android:layout_marginLeft="1dip" />
    <Button 
        android:id="@+id/edit_button" 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:layout_weight="1"
        android:lines="1"
        android:text="@string/edit_text"
        android:layout_marginLeft="1dip" />
    <Button 
        android:id="@+id/prev_button" 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:layout_weight="1"
        android:lines="1"
        android:text="@string/previous_text_short"
        android:layout_marginLeft="1dip" />
    <Button 
        android:id="@+id/next_button" 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:layout_weight="1"
        android:lines="1"
        android:text="@string/add_screen_next"
        android:layout_marginLeft="1dip" />
</LinearLayout>
